attempting to fix the theme

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@
 #
 
 # The theme we use:
-#theme: jekyll-theme-cayman
-theme:
+remote_theme: jekyll-theme-cayman
 show_downloads: false
 
 # Name of your site (displayed in the header)
@@ -80,6 +79,7 @@ sass:
 plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-remote-theme
 
 # Exclude these files from your production _site
 exclude:
