--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ show_downloads: false
 
 # Name of your site (displayed in the header)
 name: How to Stop Worrying and Learn to Love Computational Neuroimaging of the Visual Cortex
-shortname: Stop Worrying
+shortname: How to Stop Worrying...
 
 # Short bio or description (displayed in the header)
 description: A Satellite Workshop for the Vision Sciences Society Meeting, 2024
