--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,9 @@ name: How to Stop Worrying and Learn to Love Computational Neuroimaging of the V
 shortname: How to Stop Worrying...
 
 # Short bio or description (displayed in the header)
-description: A Satellite Workshop for the Vision Sciences Society Meeting, 2024
+description: |
+  <p>A Satellite Workshop for the Vision Sciences Society Meeting, 2024</p>
+  <p>Monday, May 20, 2024, 2:00-5:00pm, Banyan/Citrus Room</p>
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://upload.wikimedia.org/wikipedia/commons/6/60/BA17%2C18%2C19_-_Visual_cortex_%28V1%2C_V2%2C_V3%29_-_lateral_view.png
