--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ remote_theme: pages-themes/cayman@v0.2.0
 show_downloads: false
 
 # Name of your site (displayed in the header)
-name: How to Stop Worrying and Learn to Love Computational Neuroimaging of the Visual Cortex
+name: How to Stop Worrying and Love Computational Neuroimaging of the Visual Cortex
 shortname: How to Stop Worrying...
 
 # Short bio or description (displayed in the header)
