--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ description: A Satellite Workshop for the Vision Sciences Society Meeting, 2024
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://upload.wikimedia.org/wikipedia/commons/6/60/BA17%2C18%2C19_-_Visual_cortex_%28V1%2C_V2%2C_V3%29_-_lateral_view.png
 
+# The eventbrite ID:
+eventbrite: 863420974377
+
 #
 # Flags below are optional
 #
